[package]
name = "proj"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"

[[bin]]
name = "LinkedList"
path = "src/LinkedList.rs"

[[bin]]
name = "traits"
path = "src/traits.rs"

[[bin]]
name = "ownership"
path = "src/ownership.rs"

[[bin]]
name = "error_handling"
path = "src/error_handling.rs"

[[bin]]
name = "leetcode"
path = "src/leetcode.rs"
